<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="20"
    tools:context=".GuardListActivity">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="Cancel"
        android:textStyle="bold"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etSearchGuard"
        android:hint="Search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <ListView
        android:id="@+id/guardList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"/>

</LinearLayout>